syntax = "proto3";
package qaul.net.group;

// Group network message container
message GroupContainer {
    oneof message {
        // group invite
        InviteMember invite_member = 1;
        // reply invite
        ReplyInvite reply_invite = 2;
        // member removed
        RemovedMember removed = 4;
    }
}


// Invite member
message InviteMember{
    // group id
    bytes group_id = 1;
    // group name
    string group_name = 2;
    // group admin id
    bytes admin_id = 3;
    // group created at
    uint64 created_at = 4;
    // group member count
    uint32 members_count = 5;
}

// Group member
message Member {
    //user id
    bytes user_id = 1;
    //role
    uint32 role = 2;
    //joined at
    uint64 joined_at = 3;
    //state 
    uint32 state = 4;
    //last message index
    uint32 last_message_index = 5;
}

// Group Notify
message GroupNotify{
    // group id
    bytes group_id = 1;
    // group name
    string group_name = 2;
    //created at
    uint64 created_at = 3;
    // creator id
    bytes creator_id = 4;
    // updated members
    repeated Member members = 5;
}

// Accept Invite
message ReplyInvite{
    // group id
    bytes group_id = 1;
    // accept true : accept, false: decline
    bool accept = 2; 
}

// Removed member 
message RemovedMember{
    // group id
    bytes group_id = 1;
}
